<?xml version="1.0"?>
<package format="2">
  <name>marine_radio_msgs</name>
  <version>0.1.0</version>
  <description>Messages used marine radio communications</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>Apache-2.0</license>

  <depend>          audio_common_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>    message_generation</build_depend>
  <exec_depend>     message_runtime</exec_depend>
  <depend>          std_msgs</depend>

  <export>
  </export>
</package>
